clusters/home/apps/calibre/calibre/configs/calibre-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: calibre-ingressroute
  namespace: calibre
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://calibre.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Calibre
    gethomepage.dev/group: Kubernetes
    gethomepage.dev/icon: mdi-book
    gethomepage.dev/app: calibre # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Calibre
    #gethomepage.dev/widget.type: "calibre"
    #gethomepage.dev/widget.url: "https://calibre.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`calibre.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: calibre
      port: 8084
    middlewares:
      - name: authentik-service-middleware
        namespace: authentik
  tls:
    secretName: calibre-certificate-secret
